--- a/views/dashboard/navbar.ejs
+++ b/views/dashboard/navbar.ejs
@@ -21,10 +21,10 @@
             </a>          
          
           <!-- Calendar Icon -->
-          <button class="calendar-icon" aria-label="Calendar">
+          <!-- <button class="calendar-icon" aria-label="Calendar">
             <i class="fa-solid fa-calendar-days" style="color: #005eff;"></i> Calander
           </button>
-      
+       -->
           <!-- Help Icon -->
           <button class="help-icon" aria-label="Help">
             <i class="fa-solid fa-handshake-angle" style="color: #005eff;"></i> Support
@@ -36,17 +36,9 @@
           </button>
        -->
           <!-- User Profile Icon -->
+         
           <div class="user-profile">
             <i class="fa-solid fa-user" style="color: #005eff;"></i> Profile    
-
-             <div class="dropdown-menu">
-              <a href="#">Profile Settings</a>
-              <a href="#">Account Settings</a>
-             <a href="#"> <form action="/dashboard/logout" method="post">
-                <button>logout</button>   
-              </form>
-            </a>
-            </div>
           </div>
         </div>
       </nav>
