--- a/public/CSS/sidebar.css
+++ b/public/CSS/sidebar.css
@@ -8,7 +8,8 @@
   position: fixed;
   top: 80px;
   left: 0;
-  width: 250px;
+  min-width: 200px;
+  width: 20%;
   height: calc(100vh - 80px);
   background: whitesmoke;
   display: flex;
