--- a/views/dashboard/HelpAndSupport.ejs
+++ b/views/dashboard/HelpAndSupport.ejs
@@ -3,7 +3,6 @@
         <h2>Help & Support</h2>
         <p>Welcome to the Help & Support page. Find answers to common questions and reach out for assistance if needed.</p>
     </section>
-
     <section class="section-container">
         <h2>FAQs</h2>
         <ul class="faq-list">
@@ -31,7 +30,7 @@
     
             <div>
                 <h3>Email Support</h3>
-                <p>Send us an email at: <a href="mailto:sivamanirameti494@gmail.com">support@essenceflow.com1</a></p>
+                <p>Send us an email at: <a href="mailto:sivamanirameti494@gmail.com">support@essenceflow.com</a></p>
             </div>
         </div>
        
