--- a/views/dashboard/sidebar.ejs
+++ b/views/dashboard/sidebar.ejs
@@ -1,7 +1,7 @@
 <section class="sidebar">
     <ul class="sidebar-items">
         <li class="sidebar-item <%= (path =='/dashboard')?'active':'' %>"><a href="/dashboard"> <i class="fa-solid fa-gauge" style="color: #4287ff;"></i> Dashboard</a></li>
-        <li class="sidebar-item <%= (path =='/dashboard/myProjects')?'active':'' %>"><a href="/projects"><i class="fa-solid fa-list-check" style="color: #005eff;"></i> My projects</a></li>
+        <li class="sidebar-item <%= (path =='/dashboard/myProjects')?'active':'' %>"><a href="/dashboard/myProjects"><i class="fa-solid fa-list-check" style="color: #005eff;"></i> My projects</a></li>
         <li class="sidebar-item <%= (path =='/dashboard/teams')?'active':'' %>"><a href="/dashboard/teams"><i class="fa-solid fa-group-arrows-rotate" style="color: #0c59df;"></i> Teams</a></li>
         <li class="sidebar-item <%= (path =='/dashboard/reports')?'active':'' %>"><a href="/dashboard/reports"><i class="fa-regular fa-chart-bar" style="color: #2e7bff;"></i> Reports</a></li>
         <!-- <li class="sidebar-item"><a href="/calender"><i class="fa-regular fa-calendar-days" style="color: #005cfa;"></i> Calender</a></li> -->
