--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,8 @@
     <link rel="stylesheet" href="/CSS/features.css">
     <link rel="stylesheet" href="/CSS/pricing.css">
     <link rel="stylesheet" href="/CSS/footer.css">
+    <link rel="icon" sizes="64x64" type="image/png"  href="/Images/image.png">
+
     </head>
 
     <body id="home">
@@ -42,7 +44,7 @@
                     <!-- Column 1: Brand Logo and Motive -->
                     <div class="footer-column">
                         <img src="/Images/download.png" alt="Brand Logo" class="footer-logo">
-                        <p>Project Manager Pro simplifies teamwork and project management by offering powerful,
+                        <p>Essence Flow simplifies teamwork and project management by offering powerful,
                             intuitive tools for organizing, tracking, and completing projects efficiently.</p>
                     </div>
                     <!-- Column 2: Links -->
