--- a/public/CSS/dash-nav.css
+++ b/public/CSS/dash-nav.css
@@ -29,12 +29,14 @@
 
 .navbar-center {
   min-width: 50px;
-  flex: 3;
+  flex: 4;
   width: 100%;
   display: flex;
   justify-content: center;
 }
-
+.navbar-center form{
+  width:70%;
+}
 .search-bar {
   padding: 5px 15px;
   width: 90%;
@@ -51,6 +53,7 @@
   align-items: center;
   gap: 30px;
   font-size: 20px;
+  outline: none;
 }
 
 button {
@@ -59,6 +62,9 @@ button {
   margin-left: 15px;
   cursor: pointer;
   font-size: 20px;
+  outline: none;  
+  min-width: fit-content;
+
 }
 
 button:hover {
@@ -66,40 +72,8 @@ button:hover {
 }
 
 .user-profile {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
+cursor: pointer;  min-width: fit-content;
 
-.user-profile:hover .dropdown-menu {
-  display: block;
-}
-
-.dropdown-menu {
-  display: none;
-  position: absolute;
-  top: 20px;
-  right: 0;
-  background-color: #e0dfdf;
-  border-radius: 5px;
-  width: 150px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  font-size: 16px;
-}
-
-.dropdown-menu a {
-  padding: 10px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-menu a:hover {
-  background-color: #b6b1b1;
-}
-
-/* Theme switcher icon */
-.theme-switcher {
-  font-size: 20px;
 }
 
 #search-btn {
@@ -113,6 +87,7 @@ button:hover {
   font-size: 16px;
   border-left: 1px solid grey;
   place-content: center;
+
 }
 
 
