--- a/public/CSS/support.css
+++ b/public/CSS/support.css
@@ -1,5 +1,3 @@
-
-
 .main-support-container {
     display: flex;
     flex-direction: column;
@@ -7,10 +5,11 @@
     background: #fff;
     height: calc(100vh - 90px);
     max-width: 800px;
+    height: 100%;
 }
 
 .main-support-container section{
-    height: fit-content;
+  
     align-items: flex-start;
 
 }
