--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -2,6 +2,8 @@
 
     <link rel="stylesheet" href="/CSS/registration.css">
     <link rel="stylesheet" href="/CSS/form-styles.css">
+    <link rel="icon" sizes="64x64" type="image/png"  href="/Images/image.png">
+
     </head>
 
     <body>
@@ -54,7 +56,18 @@
                 </form>
 
             </main>
-
+            <% if(message!=""){%>
+                <script>
+                  const interval = setInterval(() => {
+                      let redirectUrl = '<%= redirectUrl %>';
+                      alert('<%= message %>');
+                      if (redirectUrl) {
+                        window.location.href = redirectUrl;
+                        clearInterval(interval); // Stop the interval after redirection
+                      }
+                    }, 500);
+                </script>
+                <%}%>
 
     </body>
 
